fixing production && vente

--- a/src/app/full-layout/full-layout.component.html
+++ b/src/app/full-layout/full-layout.component.html
@@ -6,7 +6,7 @@
 
     <!-- LOGO -->
     <div class="topbar-left">
-      <a href="javascript:" class="logo"><span>Vaye<span>tek</span></span><i class="zmdi zmdi-layers"></i></a>
+      <a href="javascript:" class="logo"><span>Prima<span>Care</span></span><i class="zmdi zmdi-layers"></i></a>
     </div>
 
     <!-- Button mobile view to collapse sidebar menu -->
@@ -46,18 +46,18 @@
     <div class="sidebar-inner slimscrollleft">
 
 
-            <div class="user-box">
-              <h5 class="label label-success ">Connected</h5>
-              <ul class="list-inline">
+      <div class="user-box">
+        <h5 class="label label-success ">Connected</h5>
+        <ul class="list-inline">
 
 
-                <li>
-                  <a href="#" (click)="logout()" class="text-custom">
-                    <i class="zmdi zmdi-power"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
+          <li>
+            <a href="#" (click)="logout()" class="text-custom">
+              <i class="zmdi zmdi-power"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
 
 
       <!--- Sidemenu -->
