--- a/src/app/production/lot/list-lot/list-lot.component.html
+++ b/src/app/production/lot/list-lot/list-lot.component.html
@@ -1,4 +1,3 @@
-
 <!-- TODO ajouter bouton anuler, date de fabrication en backend, edit produit?-->
 <div class="container">
   <div class="row">
@@ -35,19 +34,19 @@
 
             <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
                 aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Produit
-                </th>
-            <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
-                      aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Quantité Prévue
             </th>
             <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
-                aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Quantité Fixée
+                aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Qt Prévue
             </th>
             <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
-                aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Quantite Réele
+                aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Qt Fixée
             </th>
-           <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
-                          aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">État
-                          </th>
+            <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
+                aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Qt Réele
+            </th>
+            <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
+                aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">État
+            </th>
             <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
                 aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Date de Fabrication
             </th>
@@ -58,112 +57,116 @@
           </tr>
           </thead>
           <tbody>
-          <tr  *ngFor="let l of lots ; let i = index" role="row">
+          <tr *ngFor="let l of lots ; let i = index" role="row">
 
             <td>
-             <div *ngIf="l.editMode != undefined && l.editMode !=0">
-              <input [(ngModel)]="l.label" id="label" name="label" type="text"
-                style="width:100%"   placeholder="Label" class="form-control input-block" required="">
-             </div>
-             <div *ngIf="l.editMode == undefined || l.editMode ==0">
-              {{l.label}}
-              </div></td>
-
-              <td>
-             <div *ngIf="l.editMode != undefined && l.editMode !=0">
-              <input [(ngModel)]="l.reference" id="reference" name="reference" type="text"
-                 style="width:100%"  placeholder="Référence" class="form-control input-block" required="">
-             </div>
-             <div *ngIf="l.editMode == undefined || l.editMode ==0">
-              {{l.reference}}
-              </div></td>
-              <td>
-             <div *ngIf="l.editMode != undefined && l.editMode !=0">
-              <input [(ngModel)]="l.cout" id="codeABarre" name="codeABarre" type="text"
-                 style="width:100%"  placeholder="Code à barres" class="form-control input-block" required="">
-             </div>
-             <div *ngIf="l.editMode == undefined || l.editMode ==0">
-              {{l.cout}}
+              <div *ngIf="l.editMode != undefined && l.editMode !=0">
+                <input [(ngModel)]="l.label" id="label" name="label" type="text"
+                       style="width:100%" placeholder="Label" class="form-control input-block" required="">
               </div>
-              </td>
-               <td>
-
-               <a (click)="openComposition(i)" class="label  label-info"
-                      data-toggle="modal" data-target="#list-composition-modal"  title="Confirmer">
-                                        <i class="ti-list"></i></a>
-              </td>
-              <td>
-               {{l.produit.label}}
-              </td>
-              <td>
-             <div *ngIf="l.editMode != undefined && l.editMode !=0">
-              <input [(ngModel)]="l.quantite_calculee" id="seuil" name="seuil" type="number"
-                 style="width:100%"  placeholder="seuil" class="form-control input-block" required="">
-             </div>
-             <div *ngIf="l.editMode == undefined || l.editMode ==0">
-              {{l.quantite_calculee}}
-              </div>
-              </td>
-              <td>
-             <div *ngIf="l.editMode != undefined && l.editMode !=0">
-              <input [(ngModel)]="l.quantite_voulue" id="seuil" name="seuil" type="number"
-                 style="width:100%"  placeholder="seuil" class="form-control input-block" required="">
-             </div>
-             <div *ngIf="l.editMode == undefined || l.editMode ==0">
-              {{l.quantite_voulue}}
-              </div>
-              </td>
-               <td>
-             <div [ngClass]="{'has-warning' : l.inputQtReele==true}"
-             *ngIf="(l.editMode != undefined && l.editMode !=0) || l.inputQtReele == true ">
-              <input  class=" form-control input-block"
-               [(ngModel)]="l.quantite_reele"
-              id="quantite_reele" name="quantite_reele" type="number"
-                 style="width:100%"  placeholder="quantite reele"required="">
-             </div>
-             <div *ngIf="l.inputQtReele != true && (l.editMode == undefined || l.editMode ==0) ">
-              {{l.quantite_reele}}
-              </div>
-              </td>
-
-              <td>
-              <ul class="list-inline">
-
-            <li *ngIf="l.inputQtReele!=true" class= "label" [ngClass]="{'label-success': l.etat == 1,
-            'label-warning':l.etat == 0}">{{l.etat==1 ? "Términé" : "En Production"}}</li>
-            <li>
-             <a  *ngIf= "!l.etat" (click)="setFinnished(l.lot_id,i)"
-             class="label label-success " [ngClass]="{'label-warning': l.inputQtReele==true}"
-              data-toggle="tooltip" title="Production Terminée">
-              <i  class="ti-check"></i></a>
-            </li>
-            </ul>
-
-            </td>
-              <td>
-
-            <div *ngIf="l.etat==0" class= "label label-warning" >
-            En Production</div>
-             <div >
-              {{l.date_fabrication | date:'yyyy-MM-dd'}}
+              <div *ngIf="l.editMode == undefined || l.editMode ==0">
+                {{l.label}}
               </div>
             </td>
 
             <td>
               <div *ngIf="l.editMode != undefined && l.editMode !=0">
-                          <a (click)="confirmLigne(i)" class=" label label-default on-editing save-row"
-                             data-toggle="tooltip" title="Confirmer">
-                            <i class="fa fa-save"></i></a>
-                        </div>
+                <input [(ngModel)]="l.reference" id="reference" name="reference" type="text"
+                       style="width:100%" placeholder="Référence" class="form-control input-block" required="">
+              </div>
+              <div *ngIf="l.editMode == undefined || l.editMode ==0">
+                {{l.reference}}
+              </div>
+            </td>
+            <td>
+              <div *ngIf="l.editMode != undefined && l.editMode !=0">
+                <input [(ngModel)]="l.cout" id="codeABarre" name="codeABarre" type="text"
+                       style="width:100%" placeholder="Code à barres" class="form-control input-block" required="">
+              </div>
+              <div *ngIf="l.editMode == undefined || l.editMode ==0">
+                <a class="label label-warning">{{l.cout}} Dinars</a>
+              </div>
+            </td>
+            <td>
+
+              <a (click)="openComposition(i)" class="label  label-info"
+                 data-toggle="modal" data-target="#list-composition-modal" title="Confirmer">
+                <i class="ti-list"></i></a>
+            </td>
+            <td>
+              {{l.produit.label}}
+            </td>
+            <td>
+              <div *ngIf="l.editMode != undefined && l.editMode !=0">
+                <input [(ngModel)]="l.quantite_calculee" id="seuil" name="seuil" type="number"
+                       style="width:100%" placeholder="seuil" class="form-control input-block" required="">
+              </div>
+              <div *ngIf="l.editMode == undefined || l.editMode ==0">
+                <a class="label label-primary">{{l.quantite_calculee}} PCS</a>
+              </div>
+            </td>
+            <td>
+              <div *ngIf="l.editMode != undefined && l.editMode !=0">
+                <input [(ngModel)]="l.quantite_voulue" id="seuil" name="seuil" type="number"
+                       style="width:100%" placeholder="seuil" class="form-control input-block" required="">
+              </div>
+              <div *ngIf="l.editMode == undefined || l.editMode ==0">
+                <a class="label label-primary"> {{l.quantite_voulue}} PCS </a>
+              </div>
+            </td>
+            <td>
+              <div [ngClass]="{'has-warning' : l.inputQtReele==true}"
+                   *ngIf="(l.editMode != undefined && l.editMode !=0) || l.inputQtReele == true ">
+                <input class=" form-control input-block"
+                       [(ngModel)]="l.quantite_reele"
+                       id="quantite_reele" name="quantite_reele" type="number"
+                       style="width:100%" placeholder="quantite reele" required="">
+              </div>
+              <div *ngIf="l.inputQtReele != true && (l.editMode == undefined || l.editMode ==0) ">
+                <a class="label label-success"> {{l.quantite_reele}} PCS</a>
+              </div>
+            </td>
+
+            <td>
+              <ul class="list-inline">
+
+                <li *ngIf="l.inputQtReele!=true" class="label" [ngClass]="{'label-success': l.etat == 1,
+            'label-warning':l.etat == 0}">{{l.etat==1 ? "Términé" : "En Production"}}
+                </li>
+                <li>
+                  <a *ngIf="!l.etat" (click)="setFinnished(l.lot_id,i)"
+                     class="label label-success " [ngClass]="{'label-warning': l.inputQtReele==true}"
+                     data-toggle="tooltip" title="Production Terminée">
+                    <i class="ti-check"></i></a>
+                </li>
+              </ul>
+
+            </td>
+            <td>
+
+              <div *ngIf="l.etat==0" class="label label-warning">
+                En Production
+              </div>
+              <div>
+                {{l.date_fabrication | date:'yyyy-MM-dd'}}
+              </div>
+            </td>
+
+            <td>
+              <div *ngIf="l.editMode != undefined && l.editMode !=0">
+                <a (click)="confirmLigne(i)" class=" label label-default on-editing save-row"
+                   data-toggle="tooltip" title="Confirmer">
+                  <i class="fa fa-save"></i></a>
+              </div>
               <div *ngIf="l.editMode == undefined || l.editMode==0">
-                          <a (click)="editLigne(i)" class="label label-default  p-r-10"
-                             data-toggle="tooltip" title="Confirmer">
-                            <i class="fa fa-pencil"></i></a>
-                   <a (click)="ficheDeControle(l.lot_id)"class="label label-default p-r-10"
-                    data-toggle="tooltip"
-                           title="Ordre de Fabrication">
-                    <i class="ti-printer"></i></a>
-               </div>
+                <a (click)="editLigne(i)" class="label label-default  p-r-10"
+                   data-toggle="tooltip" title="Confirmer">
+                  <i class="fa fa-pencil"></i></a>
+                <a (click)="ficheDeControle(l.lot_id)" class="label label-default p-r-10"
+                   data-toggle="tooltip"
+                   title="Ordre de Fabrication">
+                  <i class="ti-printer"></i></a>
+              </div>
 
             </td>
           </tr>
@@ -181,77 +184,80 @@
   <div class="modal-dialog modal-lg">
     <div class="modal-content" [ngBusy]="modalBusy">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" (click)="cleanCompositionModal()" aria-hidden="true">×</button>
+        <button type="button" class="close" data-dismiss="modal" (click)="cleanCompositionModal()" aria-hidden="true">
+          ×
+        </button>
         <h4 class="modal-title" id="myModalLabel">Composition du lot:
           Ref : {{selectedLot?.reference}} - {{selectedLot?.label}}</h4></div>
       <div class="modal-body">
 
 
-    <table  class="table  table-striped table-bordered  dataTable datatable2 no-footer" id="datatable2"
-           role="grid" aria-describedby="datatable_info">
-      <thead>
-      <tr role="row">
-        <th tabindex="0" class="sorting_asc" aria-controls="datatable" style="width: 170px;"
-            aria-label="Name: activate to sort column descending" aria-sort="ascending" rowspan="1"
-            colspan="1">N°
-        </th>
-        <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
-            aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Produit de Base
-        </th>
+        <table class="table  table-striped table-bordered  dataTable datatable2 no-footer" id="datatable2"
+               role="grid" aria-describedby="datatable_info">
+          <thead>
+          <tr role="row">
+            <th tabindex="0" class="sorting_asc" aria-controls="datatable" style="width: 170px;"
+                aria-label="Name: activate to sort column descending" aria-sort="ascending" rowspan="1"
+                colspan="1">N°
+            </th>
+            <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
+                aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Produit de Base
+            </th>
 
-        <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
-            aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Quantité
-        </th>
+            <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
+                aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Quantité
+            </th>
 
-      </tr>
-      </thead>
-      <tbody>
-      <tr *ngFor="let ligne of selectedLot?.lot_produit_bases;
+          </tr>
+          </thead>
+          <tbody>
+          <tr *ngFor="let ligne of selectedLot?.lot_produit_bases;
       let i = index" role="row">
-        <td>
-          {{i+1}}
-        </td>
+            <td>
+              {{i+1}}
+            </td>
 
-        <td>
-            {{ligne.produit_base.label}} ({{ligne.produit_base.unite.indice}})
-        </td>
-
-
-        <td>
-        <div
-       *ngIf="(ligne.editMode != undefined && ligne.editMode !=0) ">
-          <input  class=" form-control input-block"
-           [(ngModel)]="ligne.quantite"
-          id="quantite" name="quantite" type="number"
-             style="width:100%"  placeholder="Quantité du produit" required="">
-                   </div>
-         <div *ngIf="(ligne.editMode == undefined || ligne.editMode ==0) ">
-            {{ligne.quantite}}
-
-          </div>
-        </td>
-
-        <td>
-            <div *ngIf="(ligne.editMode != undefined && ligne.editMode !=0)">
-              <a (click)="confirmLigne2(i)" class="on-editing save-row"
-                 data-toggle="tooltip" title="Confirmer">
-                <i class="fa fa-save"></i></a>
-            </div>
-            <div *ngIf="(ligne.editMode == undefined || ligne.editMode ==0)">
-              <a (click)="editLigne2(i)" class="text-inverse p-r-10"
-                 data-toggle="tooltip" title="Confirmer">
-                <i class="fa fa-pencil"></i></a>
-            </div>
+            <td>
+              {{ligne.produit_base.label}} ({{ligne.produit_base.unite.indice}})
+            </td>
 
 
-      </td>
-      </tr>
-      </tbody>
-    </table>
+            <td>
+              <div
+                *ngIf="(ligne.editMode != undefined && ligne.editMode !=0) ">
+                <input class=" form-control input-block"
+                       [(ngModel)]="ligne.quantite"
+                       id="quantite" name="quantite" type="number"
+                       style="width:100%" placeholder="Quantité du produit" required="">
+              </div>
+              <div *ngIf="(ligne.editMode == undefined || ligne.editMode ==0) ">
+                {{ligne.quantite}}
 
-          </div>
+              </div>
+            </td>
+
+            <td>
+              <div *ngIf="(ligne.editMode != undefined && ligne.editMode !=0)">
+                <a (click)="confirmLigne2(i)" class="on-editing save-row"
+                   data-toggle="tooltip" title="Confirmer">
+                  <i class="fa fa-save"></i></a>
+              </div>
+              <div *ngIf="(ligne.editMode == undefined || ligne.editMode ==0)">
+                <a (click)="editLigne2(i)" class="text-inverse p-r-10"
+                   data-toggle="tooltip" title="Confirmer">
+                  <i class="fa fa-pencil"></i></a>
+              </div>
+
+
+            </td>
+          </tr>
+          </tbody>
+        </table>
+
+      </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-info waves-effect" data-dismiss="modal" (click)="cleanCompositionModal()">Close
+        <button type="button" class="btn btn-info waves-effect" data-dismiss="modal" (click)="cleanCompositionModal()">
+          Close
         </button>
 
       </div>
