--- a/src/app/production/produit/list-produit/list-produit.component.html
+++ b/src/app/production/produit/list-produit/list-produit.component.html
@@ -2,7 +2,6 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
-
       <div class="card-box">
         <div class="row">
           <div class="col-sm-6">
@@ -88,7 +87,7 @@
                        style="width:100%" placeholder="Prix" class="form-control input-block" required="">
               </div>
               <div *ngIf="p.editMode == undefined || p.editMode ==0">
-                {{p.prix}}
+                <a class="label label-success">{{p.prix}} Dinars</a>
               </div>
             </td>
             <td>
@@ -103,67 +102,14 @@
             </td>
             <td>
 
-              <a (click)="openComposition(i)" class="label  label-info"
-                 data-toggle="modal" data-target="#list-composition-modal" title="Confirmer">
-                <i class="ti-list"></i></a>
-
-            </td>
-            <td>
-              <div *ngIf="p.editMode != undefined && p.editMode !=0">
-                <input [(ngModel)]="p.label" id="label" name="label" type="text"
-                       style="width:100%" placeholder="Label" class="form-control input-block" required="">
+              <div *ngIf="p.taxes.length!=0">
+                <a *ngFor="let taxe of p.taxes" class="label-danger label text-white" style="margin-right: 3px">
+                  {{taxe.label}}
+                  {{taxe.pourcentage}}
+                  %</a>
               </div>
-              <div *ngIf="p.editMode == undefined || p.editMode ==0">
-                {{p.label}}
-              </div>
-            </td>
-
-            <td>
-              <div *ngIf="p.editMode != undefined && p.editMode !=0">
-                <input [(ngModel)]="p.reference" id="reference" name="reference" type="text"
-                       style="width:100%" placeholder="Référence" class="form-control input-block" required="">
-              </div>
-              <div *ngIf="p.editMode == undefined || p.editMode ==0">
-                {{p.reference}}
-              </div>
-            </td>
-            <td>
-              <div *ngIf="p.editMode != undefined && p.editMode !=0">
-                <input [(ngModel)]="p.codeABarre" id="codeABarre" name="codeABarre" type="text"
-                       style="width:100%" placeholder="Code à barres" class="form-control input-block" required="">
-              </div>
-              <div *ngIf="p.editMode == undefined || p.editMode ==0">
-                {{p.codeABarre}}
-              </div>
-            </td>
-            <td>
-              <div *ngIf="p.editMode != undefined && p.editMode !=0">
-                <input [(ngModel)]="p.prix" id="prix" name="prix" type="number"
-                       style="width:100%" placeholder="Prix" class="form-control input-block" required="">
-              </div>
-              <div *ngIf="p.editMode == undefined || p.editMode ==0">
-                {{p.prix}}
-              </div>
-            </td>
-            <td>
-              <div *ngIf="p.editMode != undefined && p.editMode !=0">
-                <input [(ngModel)]="p.seuil" id="seuil" name="seuil" type="number"
-                       style="width:100%" placeholder="seuil" class="form-control input-block" required="">
-              </div>
-              <div *ngIf="p.editMode == undefined || p.editMode ==0">
-                {{p.seuil}}
-                <i style="color: red" class="fa fa-warning" *ngIf="p.seuil>p.quantite_disponible"></i>
-              </div>
-            </td>
-            <td>
-              <select *ngIf="p.taxes.length != 0" id="taxeSelect"
-                      class="select-taxe-{{i}} form-control" name="taxeSelect">
-                <option *ngFor="let taxe of p.taxes, let j=index" value="{{taxe.taxe_id}}">{{taxe.label}}
-                  ({{taxe.pourcentage}} %)
-                </option>
-              </select>
               <div *ngIf="p.taxes.length == 0">
-                Pas de taxes
+                <a class="label label-success">Pas de taxes</a>
               </div>
             </td>
             <td>
@@ -181,7 +127,9 @@
                        required="">
               </div>
               <div *ngIf="p.editMode == undefined || p.editMode ==0">
-                {{p.quantite_disponible}}
+                <a class="label label-default text-white">
+                  {{p.quantite_disponible}} PCS
+                </a>
               </div>
             </td>
             <td>
@@ -191,7 +139,9 @@
                        style="width:100%" placeholder="quantite_physique" class="form-control input-block" required="">
               </div>
               <div *ngIf="p.editMode == undefined || p.editMode ==0">
-                {{p.quantite_physique}}
+                <a class="label label-warning text-white">
+                  {{p.quantite_physique}} PCS
+                </a>
               </div>
             </td>
 
@@ -214,13 +164,10 @@
           </tr>
           </tbody>
         </table>
-
       </div>
     </div>
   </div>
 </div>
-
-
 <div id="list-composition-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
      aria-hidden="true">
   <div class="modal-dialog modal-lg">
@@ -232,9 +179,7 @@
         <h4 class="modal-title" id="myModalLabel">Composition du produit:
           Ref : {{selectedProduit?.reference}} - {{selectedProduit?.label}}</h4></div>
       <div class="modal-body">
-
-
-        <table class="table  table-striped table-bordered  dataTable no-footer" id="datatable2"
+        <table class="table  table-striped table-bordered  datatable2 no-footer" id="datatable2"
                role="grid" aria-describedby="datatable_info">
           <thead>
           <tr role="row">
@@ -248,6 +193,9 @@
 
             <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
                 aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Quantité
+            </th>
+            <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
+                aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Actions
             </th>
 
           </tr>
@@ -291,8 +239,6 @@
                 <a *ngIf="enabled == false" (click)="deleteLigne2(i)" class="text-inverse p-r-10"
                    data-toggle="tooltip" title="Delete">
                   <i class="fa fa-trash-o"></i></a>
-
-
               </div>
               <div *ngIf="!testEditProduit() || ligne.editMode == undefined || ligne.editMode==0">
                 <a (click)="editLigne2(i)" class="text-inverse p-r-10"
@@ -310,7 +256,6 @@
           </tr>
           </tbody>
         </table>
-
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-info waves-effect" data-dismiss="modal" (click)="cleanCompositionModal()">
@@ -323,6 +268,3 @@
     </div>
   </div>
 </div>
-
-
-
