--- a/src/app/produit-base/list-achat/list-achat.component.html
+++ b/src/app/produit-base/list-achat/list-achat.component.html
@@ -1,4 +1,4 @@
-<div class="card-box" *ngIf="achats">
+<div class="card-box">
   <div class="row">
     <div class="col-sm-6">
       <div class="m-b-30">
