--- a/src/app/produit-base/list-commande/list-commande.component.html
+++ b/src/app/produit-base/list-commande/list-commande.component.html
@@ -1,4 +1,4 @@
-<div class="card-box" *ngIf="commandes">
+<div class="card-box">
   <div class="row">
     <div class="col-sm-6">
       <div class="m-b-30">
