--- a/src/app/produit-base/list-produit-base/list-produit-base.component.html
+++ b/src/app/produit-base/list-produit-base/list-produit-base.component.html
@@ -1,7 +1,7 @@
-<div class="card-box" *ngIf="pbs">
+<div class="card-box">
   <h4 class="header-title m-t-0 m-b-30">Stock des Produits</h4>
 
-  <table class="table table-striped table-bordered  dataTable no-footer" id="datatable"
+  <table [ngBusy]="busy" class="table table-striped table-bordered  dataTable no-footer" id="datatable"
          role="grid" aria-describedby="datatable_info">
     <thead>
     <tr role="row">
@@ -25,7 +25,7 @@
           aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Type
       </th>
       <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
-          aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Unite
+          aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Actions
       </th>
     </tr>
     </thead>
@@ -41,16 +41,42 @@
         {{p.reference}}
       </td>
       <td>
-        {{p.quantite_disponible}}
+        <div *ngIf="p.editMode != undefined && p.editMode !=0">
+          <input [(ngModel)]="p.quantite_disponible" id="seuil" name="seuil" type="number"
+                 style="width:100%" placeholder="Qt disponible" class="form-control input-block" required="">
+        </div>
+        <div *ngIf="p.editMode == undefined || p.editMode ==0">
+          <a class="label label-default text-white">
+            {{p.quantite_disponible}} {{p.unite.nom}}
+          </a>
+        </div>
       </td>
       <td>
-        {{p.quantite_physique}}
+        <div *ngIf="p.editMode != undefined && p.editMode !=0">
+          <input [(ngModel)]="p.quantite_physique" id="quantite_physique" name="quantite_physique" type="number"
+                 style="width:100%" placeholder="Qt physique" class="form-control input-block" required="">
+        </div>
+        <div *ngIf="p.editMode == undefined || p.editMode ==0">
+          <a class="label label-warning text-white">
+            {{p.quantite_physique}} {{p.unite.nom}}
+          </a>
+        </div>
       </td>
       <td>
         {{p.type.label}}
       </td>
       <td>
-        {{p.unite.nom}}
+        <div *ngIf="p.editMode != undefined && p.editMode !=0">
+          <a (click)="confirmLigne(i)" class="label label-default on-editing save-row"
+             data-toggle="tooltip" title="Confirmer">
+            <i class="fa fa-save"></i></a>
+        </div>
+        <div *ngIf="p.editMode == undefined || p.editMode==0">
+          <a (click)="editLigne(i)" class="label label-default  p-r-10"
+             data-toggle="tooltip" title="Confirmer">
+            <i class="fa fa-pencil"></i></a>
+        </div>
+
       </td>
     </tr>
     </tbody>
@@ -64,7 +90,8 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
-        <h4 class="modal-title" id="myModalLabel">Liste de Produits de la commande #{{cmd.commande_achat_id}}:</h4></div>
+        <h4 class="modal-title" id="myModalLabel">Liste de Produits de la commande #{{cmd.commande_achat_id}}:</h4>
+      </div>
       <div class="modal-body">
         <div class="editable-responsive">
           <table class="table table-striped" id="prods">
@@ -91,7 +118,7 @@
         <h4>Cout Total: {{cmd.montant}}DT</h4>
         <h4>Date de Création: {{cmd.created_at}}</h4>
         <hr>
-        <button type="button" class="btn btn-info waves-effect" data-dismiss="modal" >Close
+        <button type="button" class="btn btn-info waves-effect" data-dismiss="modal">Close
         </button>
       </div>
     </div>
