--- a/src/app/vente/facture/list-facture/list-facture.component.html
+++ b/src/app/vente/facture/list-facture/list-facture.component.html
@@ -13,7 +13,7 @@
           </div>
         </div>
         <div class="editable-responsive">
-          <table class="table table-striped dataTable" id="factures" *ngIf="factures">
+          <table [ngBusy]="busy" class="table table-striped dataTable" id="factures">
             <thead>
             <tr>
               <th>ID</th>
@@ -27,8 +27,8 @@
             <tr class="gradeX" *ngFor="let f of factures, let i=index">
               <td>{{f.facture_id}}</td>
               <td>{{f.client.name}}</td>
-              <td>{{f.montant}}DT</td>
-              <td>{{f.mode_paiement.nom}}</td>
+              <td><a class="label label-success">{{f.montant}} Dinars</a></td>
+              <td><a class="label label-primary">{{f.mode_paiement.nom}}</a></td>
               <td class="actions">
                 <a href="#" class="on-default edit-row" data-toggle="modal" data-target="#list-liv-modal"
                    (click)="selectFacture(i)"><i class="fa fa-align-left"></i></a> &nbsp;
