--- a/src/app/vente/livraison/list-livraison/list-livraison.component.html
+++ b/src/app/vente/livraison/list-livraison/list-livraison.component.html
@@ -13,7 +13,7 @@
         </div>
 
         <div [ngBusy]="busy" class="editable-responsive">
-          <table class="table table-striped" id="livraisons" *ngIf="livraisons">
+          <table class="table table-striped" id="livraisons">
             <thead>
             <tr>
               <th>ID</th>
@@ -28,9 +28,15 @@
             <tr class="gradeX" *ngFor="let l of livraisons, let i=index">
               <td>{{l.livraison_id}}</td>
               <td>{{l.date}}</td>
-              <td>{{l.montant}}DT</td>
-              <td *ngIf="l.facture_id">Facturée</td>
-              <td *ngIf="!l.facture_id">Non facturée</td>
+              <td><a class="label-success label">{{l.montant}} Dinars</a></td>
+              <td *ngIf="l.facture_id">
+                <a class="label label-success">Facturée</a>
+              </td>
+              <td *ngIf="!l.facture_id">
+                <a class="label label-warning">
+                  Non facturée</a>
+              </td>
+
               <td>{{l.client.name}}</td>
               <td class="actions">
                 <a href="#" class="on-default edit-row" data-toggle="modal" data-target="#list-prod-modal"
