--- a/src/app/produit-base/ajout-commande/ajout-commande.component.html
+++ b/src/app/produit-base/ajout-commande/ajout-commande.component.html
@@ -15,7 +15,7 @@
     </div>
 
 
-    <table class="table table-striped table-bordered  dataTable no-footer" id="datatable"
+    <table [ngBusy]="busy" class="table table-striped table-bordered  dataTable no-footer" id="datatable"
            role="grid" aria-describedby="datatable_info">
       <thead>
       <tr role="row">
