--- a/src/app/produit-base/list-produit-base/list-produit-base.component.html
+++ b/src/app/produit-base/list-produit-base/list-produit-base.component.html
@@ -1,5 +1,10 @@
 <div class="card-box">
   <h4 class="header-title m-t-0 m-b-30">Stock des Produits</h4>
+  <button id="addProduct" class="btn btn-primary waves-effect waves-light"
+          [routerLink]="['/produit-base/add']">Ajouter Produit Base <i
+    class="fa fa-plus"></i></button>
+  <br>
+  <br>
 
   <table [ngBusy]="busy" class="table table-striped table-bordered  dataTable no-footer" id="datatable"
          role="grid" aria-describedby="datatable_info">
