--- a/src/app/produit-base/list-produit-base/list-produit-base.component.html
+++ b/src/app/produit-base/list-produit-base/list-produit-base.component.html
@@ -30,6 +30,9 @@
           aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Type
       </th>
       <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
+          aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Taxes
+      </th>
+      <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
           aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Actions
       </th>
     </tr>
@@ -83,7 +86,8 @@
             {{p.quantite_physique}} {{p.unite.nom}}
           </a>
         </div>
-      </td><td>
+      </td>
+      <td>
         <div *ngIf="p.editMode != undefined && p.editMode !=0">
           <select class="form-control" name="type" id="typeSelect" [(ngModel)]="p.type" [ngModelOptions]="{standalone:true}">
             <option *ngFor="let t of types, let i=index" [ngValue]="t">{{t.label}} </option>
@@ -93,6 +97,17 @@
           <a class="label label-warning text-white">
             {{p.type.label}}
           </a>
+        </div>
+      </td>
+      <td>
+        <div *ngIf="p.taxes.length!=0">
+          <a *ngFor="let taxe of p.taxes" class="label-danger label text-white" style="margin-right: 3px">
+            {{taxe.label}}
+            {{taxe.pourcentage}}
+            %</a>
+        </div>
+        <div *ngIf="p.taxes.length == 0">
+          <a class="label label-success">Pas de taxes</a>
         </div>
       </td>
       <td>
@@ -106,7 +121,6 @@
              data-toggle="tooltip" title="Confirmer">
             <i class="fa fa-pencil"></i></a>
         </div>
-
       </td>
     </tr>
     </tbody>
