--- a/src/app/produit-base/list-produit-base/list-produit-base.component.html
+++ b/src/app/produit-base/list-produit-base/list-produit-base.component.html
@@ -100,6 +100,15 @@
         </div>
       </td>
       <td>
+        <div *ngIf="p.editMode != undefined && p.editMode !=0">
+          <select class="select-taxe-{{i}} form-control" multiple="multiple" id="taxeSelect{{i}}"
+                  name="taxeSelect">
+            <option *ngFor="let taxe of taxes, let j=index"
+                    value="{{taxe.taxe_id}}">{{taxe.label}}
+              ({{taxe.pourcentage}} %)</option>
+          </select>
+        </div>
+        <div *ngIf="p.editMode == undefined || p.editMode ==0">
         <div *ngIf="p.taxes.length!=0">
           <a *ngFor="let taxe of p.taxes" class="label-danger label text-white" style="margin-right: 3px">
             {{taxe.label}}
@@ -108,6 +117,7 @@
         </div>
         <div *ngIf="p.taxes.length == 0">
           <a class="label label-success">Pas de taxes</a>
+        </div>
         </div>
       </td>
       <td>
