--- a/src/app/vente/commande/list-commande/list-commande.component.html
+++ b/src/app/vente/commande/list-commande/list-commande.component.html
@@ -67,9 +67,9 @@
               <!--<a [routerLink]="['/production/commande/'+commande.commande_id+'/edit']" class="text-inverse p-r-10"-->
               <!--data-toggle="tooltip" title="Edit">-->
               <!--<i class="ti-marker-alt"></i></a>-->
-              <a (click)="bon(commande.commande_id)" class="text-inverse p-r-10" data-toggle="tooltip"
-                 title="Bon de Commande">
-                <i class="ti-printer"></i></a> &nbsp;
+              <!--     <a (click)="bon(commande.commande_id)" class="text-inverse p-r-10" data-toggle="tooltip"
+                      title="Bon de Commande">
+                     <i class="ti-printer"></i></a> &nbsp;-->
               <input type="checkbox" *ngIf="clientIndex!=-1&&commande.client_id==clients[clientIndex].client_id">
             </td>
           </tr>
