--- a/src/app/vente/facture/list-facture/list-facture.component.html
+++ b/src/app/vente/facture/list-facture/list-facture.component.html
@@ -32,8 +32,8 @@
               <td class="actions">
                 <a href="#" class="on-default edit-row" data-toggle="modal" data-target="#list-liv-modal"
                    (click)="selectFacture(i)"><i class="fa fa-align-left"></i></a> &nbsp;
-                <a (click)="bon(i)" class="text-inverse p-r-10" data-toggle="tooltip" title="Bon de Commande">
-                  <i class="ti-printer"></i></a>
+                <!--                <a (click)="bon(i)" class="text-inverse p-r-10" data-toggle="tooltip" title="Bon de Commande">
+                                  <i class="ti-printer"></i></a>-->
               </td>
             </tr>
             </tbody>
