--- a/src/app/vente/commande/list-commande/list-commande.component.html
+++ b/src/app/vente/commande/list-commande/list-commande.component.html
@@ -72,6 +72,10 @@
                      <i class="ti-printer"></i></a> &nbsp;-->
               <input type="checkbox" *ngIf="clientIndex!=-1&&commande.client_id==clients[clientIndex].client_id">
 
+              <a [routerLink]="['/vente/commande/'+commande.commande_id+'/edit']"
+                 class="label label-default text-white p-r-10"
+                 data-toggle="tooltip" title="Modifier">
+                <i class="fa fa-pencil"></i></a>
               <a (click)="deleteCommande(i)" class="label label-danger text-white p-r-10"
                  data-toggle="tooltip" title="Confirmer">
                 <i class="fa fa-remove"></i></a>
