--- a/src/app/vente/livraison/list-livraison/list-livraison.component.html
+++ b/src/app/vente/livraison/list-livraison/list-livraison.component.html
@@ -45,10 +45,11 @@
                   <i class="fa fa-pencil"></i></a>
                 <a (click)="deleteLivraison(i)" class="label label-danger text-white p-r-10"
                    data-toggle="tooltip" title="Confirmer">
-                  <i class="fa fa-remove"></i></a>
-                <!--               <a (click)="bon(l.livraison_id)" class="text-inverse p-r-10" data-toggle="tooltip"
-                                  title="Bon de Livraison">
-                                 <i class="ti-printer"></i></a>-->
+                  <i class="fa fa-remove"></i></a>&nbsp;
+                <a (click)="print(livraisons[i].livraison_id)" class="label label-default p-r-10"
+                   data-toggle="tooltip"
+                   title="Bon de livraison">
+                  <i class="ti-printer"></i></a>
               </td>
             </tr>
             </tbody>
